@@ -8,6 +8,7 @@ Version 3.0.1
 * DiFX extracted pulse cals: ensure proper antennaIds for merged job cases
 * valgrind used to track down some memory leaks
 * print fits keywords for each fits file when -v is supplied
+* don't invoke sniffer in cases where it would use too much memory
 
 Version 3.0
 * Includes the following merged changes from DiFX-1.5:
